@@ -18,6 +18,8 @@ GitHub.
 * Method `getRootUrisForPackage()` in class `ClasspathScanner` now returns a valid list of
   class names when the package name is equal to the name of a module on the module path
   and when running on Java 8.
+* Direct child descriptors of the engine descriptor now also acquire the global read lock
+  when they require other exclusive resources.
 
 
 [[release-notes-5.7.2-junit-jupiter]]
@@ -25,7 +27,8 @@ GitHub.
 
 ==== Bug Fixes
 
-* ❓
+* Test classes annotated with `@ResourceLock` no longer run in parallel with `@Isolated`
+  ones.
 
 
 [[release-notes-5.7.2-junit-vintage]]
